--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "express-session": "^1.16.1",
+    "handlebars-helpers": "^0.10.0",
     "mysql2": "^1.7.0",
     "nodemailer": "^6.4.8",
     "nodemailer-mailgun-transport": "^2.0.0",
