no password in development

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
         "username": "root",
-        "password": "cogsworth",
+        "password": null,
         "database": "selfcare_sidekick",
         "host": "localhost",
         "dialect": "mysql",
